--- a/back-end/config/config.env
+++ b/back-end/config/config.env
@@ -2,3 +2,5 @@ PORT = 8080
 NODE_ENV = DEVELOPMENT
 
 DB_LOCAL_URL = mongodb://localhost:27017/youecom
+JWT_SECRET = JFDFNLSDMFEZPJFZELDFISDNCSDMOFZEJKLF
+JWT_EXPIRES_TIME = 7d
