--- a/back-end/config/config.env
+++ b/back-end/config/config.env
@@ -4,3 +4,5 @@ NODE_ENV = DEVELOPMENT
 DB_LOCAL_URL = mongodb://localhost:27017/youecom
 JWT_SECRET = JFDFNLSDMFEZPJFZELDFISDNCSDMOFZEJKLF
 JWT_EXPIRES_TIME = 7d
+
+COOKIE_EXPIRES_TIME = 7
