--- a/back-end/config/config.env
+++ b/back-end/config/config.env
@@ -6,3 +6,10 @@ JWT_SECRET = JFDFNLSDMFEZPJFZELDFISDNCSDMOFZEJKLF
 JWT_EXPIRES_TIME = 7d
 
 COOKIE_EXPIRES_TIME = 7
+
+SMTP_HOST = smtp.mailtrap.io
+SMTP_PORT = 2525
+SMTP_EMAIL = 6bae18950ffe3b
+SMTP_PASSWORD = 883e13b201ccf9
+SMTP_FROM_EMAIL = noreply@youecom.com
+SMTP_FROM_NAME = YouEcom
